--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "mi_app"
-          heroku_email: "gusecuador@hotmail.com"
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
