--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "mi_app"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          buildpack: 'heroku/python'
           usedocker: true
