--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy
 on:
   push:
     branches:
-      - app_tratamiento_datos
+      - app_tratamientos_datos
 jobs:
   build:
     runs-on: ubuntu-latest
